--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>com.semanticcms</groupId><artifactId>semanticcms-section-all</artifactId><version>1.6.0-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
+				<groupId>com.semanticcms</groupId><artifactId>semanticcms-section-all</artifactId><version>1.6.0${POST-SNAPSHOT}</version>
 				<type>pom</type>
 			</dependency>
 			<dependency>
