--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 		<relativePath>../../parent/pom.xml</relativePath>
 	</parent>
 
-	<groupId>com.semanticcms</groupId><artifactId>semanticcms-section-bom</artifactId><version>1.6.0</version>
+	<groupId>com.semanticcms</groupId><artifactId>semanticcms-section-bom</artifactId><version>1.6.0-POST-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>SemanticCMS Section BOM</name>
@@ -41,7 +41,7 @@ along with semanticcms-section-bom.  If not, see <http://www.gnu.org/licenses />
 		<connection>scm:git:git://github.com/aoindustries/semanticcms-section-bom.git</connection>
 		<developerConnection>scm:git:git@github.com:aoindustries/semanticcms-section-bom.git</developerConnection>
 		<url>https://github.com/aoindustries/semanticcms-section-bom</url>
-		<tag>semanticcms-section-bom-1.6.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<issueManagement>
